Switched partner and friend

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                         <p>We are grateful to our sponsors for helping us realizing our dream and organizing the Web11 conference. Media2B, Contracts11, StabiAlert, Cedel, S&amp;S systems, Paylogic, Hugo</p>
                         <p>If you endorse our mission as well you can become a friend or partner as well. Here are the options:</p>
                         <ul>
-                            <li><b><i>Friend</i></b> is a fellow-organizing company having a say in the direction of conference and (some) talks. The sponsor amount for friends is 1.000 euro, which will give the friend a logo on site, additional marketing and 6 entrance tickets.
+                            <li><b><i>Partner</i></b> is a fellow-organizing company having a say in the direction of conference and (some) talks. The sponsor amount for friends is 1.000 euro, which will give the friend a logo on site, additional marketing and 6 entrance tickets.
                             </li>
-                            <li> <b><i>Partner</i></b> is a company that supports the goal of the conference and wants to share it's name to show this to the world. The sponsor amount for partners is 250 euro, which will give them on site and marketing and 2 entrance tickets.
+                            <li> <b><i>Friend</i></b> is a company that supports the goal of the conference and wants to share it's name to show this to the world. The sponsor amount for partners is 250 euro, which will give them on site and marketing and 2 entrance tickets.
                             </li>
                         </ul>
                         <p>Please contact us (see details below) if you are interested.</p>
