Added sponsor logos

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         <div align="center">
             	<span><img src="http://www.web11.org/logo.png"></span>
         </div>
+        <div style='float:left; width:150px; margin:20px; margin-top:100px'>
+          <h1><u>Partners</u><h1>
+              <a href="http://www.media2b.net"><img src="https://www.google.com/a/media2b.net/images/logo.gif" width="150px"/></a>
+          <a href="http://www.cityoftalent.nl"><img src="https://www.hanze.nl/assets/corporate/PublishingImages/Public/The_city_of_Talent.jpg" width="150px"/></a>
+          <a href="http://hackerone.com"><img src="http://nullcon.net/website/goa-15/images/sponsor-hackerone.jpg" width="150px"/></a>
+          <h1><u>Friends</u><h1>
+          <a href="http://www.contracts11.com"><img src="http://contracts11.com/logo.png" width="150px"/></a>
+          <a href="http://www.stabialert.nl"><img src="http://www.stabialert.nl/images/vormgeving/stabialert_logo.png" width="150px"/></a>
+          <a href="http://www.hugo.events"><img src="http://www.hugo.events/assets/img/hugo_white.png" width="150px"/></a>
+          <a href="http://www.devriestaxadvisors.nl"><img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/v/t1.0-1/c12.12.155.155/600849_602198996463770_1342680991_n.png?oh=6c490a6fe043ce75751cbcf50977f8c6&oe=55E78C7D&__gda__=1443311203_4a7361123f8325f7c4e94f171ff3c3bc" width="150px"/></a>
+        </div>
         <div style='float:right; width:320px; margin:20px; margin-top:100px'>
         	<a class="twitter-timeline"  href="https://twitter.com/_web11_" data-widget-id="636642087904124928">Tweets by @_web11_</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -84,7 +95,9 @@
                         <h1>Schedule</h1>
                         <iframe src="https://docs.google.com/spreadsheets/d/1YKUVVbQSNck6xxqq2ZH4-bOgzC_ObnGlhr5MOpVpgIY/pubhtml?gid=11&amp;single=true&amp;widget=true&amp;headers=false" width="760" height="600" frameborder="0" marginheight="0" marginwidth="0"></iframe>
                         <h1>Friends and partners</h1>
-                        <p>We are grateful to our sponsors for helping us realizing our dream and organizing the Web11 conference. Media2B, Contracts11, StabiAlert, Cedel, S&amp;S systems, Paylogic, Hugo</p>
+                        <p>We are grateful to our sponsors for helping us realizing our dream and organizing the Web11 conference. </p>
+                        <p>Partners: Hacker1, Gemeente Groningen City of Talent.</p>
+                        <p>Friends: Media2B, Contracts11, StabiAlert, Hugo, De Vries tax advisors</p>
                         <p>If you endorse our mission as well you can become a friend or partner as well. Here are the options:</p>
                         <ul>
                             <li><b><i>Partner</i></b> is a fellow-organizing company having a say in the direction of conference and (some) talks. The sponsor amount for friends is 1.000 euro, which will give the friend a logo on site, additional marketing and 6 entrance tickets.
