Right logo (white text)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <body cz-shortcut-listen="true">
         <div align="center">
-            	<span><img src="http://www.web11.org/logo.png"></span>
+            	<span><img src="http://www.web11.org/logo.png" width="300px"></span>
         </div>
         <div style='float:left; width:150px; margin:20px; margin-top:100px'>
           <h1><u>Partners</u><h1>
