--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                         <iframe src="https://docs.google.com/spreadsheets/d/1YKUVVbQSNck6xxqq2ZH4-bOgzC_ObnGlhr5MOpVpgIY/pubhtml?gid=11&amp;single=true&amp;widget=true&amp;headers=false" width="760" height="600" frameborder="0" marginheight="0" marginwidth="0"></iframe>
                         <h1>Friends and partners</h1>
                         <p>We are grateful to our sponsors for helping us realizing our dream and organizing the Web11 conference. </p>
-                        <p>Partners: HackerOne, Gemeente Groningen City of Talent.</p>
-                        <p>Friends: Media2B, Contracts11, StabiAlert, Hugo, De Vries tax advisors</p>
+                        <p>Partners: Media2B, HackerOne, Gemeente Groningen City of Talent.</p>
+                        <p>Friends: Contracts11, StabiAlert, Hugo, De Vries tax advisors</p>
                         <p>If you endorse our mission as well you can become a friend or partner as well. Here are the options:</p>
                         <ul>
                             <li><b><i>Partner</i></b> is a fellow-organizing company having a say in the direction of conference and (some) talks. The sponsor amount for friends is 1.000 euro, which will give the friend a logo on site, additional marketing and 6 entrance tickets.
